--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "e": "^0.2.1",
     "emailjs-com": "^3.2.0",
     "ityped": "^1.0.3",
     "node-sass": "^6.0.1",
